@@ -1,5 +1,3 @@
-// Requires Windows 7 SDK to build
-#if WINVER >= 0x0601
 // This file declares the IApplicationDestinations Interface for Python.
 // Generated by makegw.py
 // ---------------------------------------------------
@@ -21,5 +19,3 @@ class PyIApplicationDestinations : public PyIUnknown {
     PyIApplicationDestinations(IUnknown *pdisp);
     ~PyIApplicationDestinations();
 };
-
-#endif  // WINVER
