@@ -4,9 +4,6 @@
 //
 // Interface Declaration
 
-// Requires Windows 7 SDK to build
-#if WINVER >= 0x0601
-
 class PyIObjectArray : public PyIUnknown {
    public:
     MAKE_PYCOM_CTOR(PyIObjectArray);
@@ -21,5 +18,3 @@ class PyIObjectArray : public PyIUnknown {
     PyIObjectArray(IUnknown *pdisp);
     ~PyIObjectArray();
 };
-
-#endif  // WINVER
