@@ -13,6 +13,8 @@ https://mhammond.github.io/pywin32_installers.html .
 
 Coming in build 310, as yet unreleased
 --------------------------------------
+* Drop support for Vista, set Windows 7 as the minimal Windows version. (#, @Avasam)
+  * Restores many IIDs in `win32com(ext).shell.shell`. See #2486 for details.
 
 Build 309, released 2025/03/09
 ------------------------------
